1.0-devel
======================

 * Fixed [ 1114696 ] use correct mimetype for reStructuredText and [ 1122135 ]
   ATCT edit not preserving text type selection, not ATCT bug be renaming 
   text/restructured to text/x-rst.
   [tiran]

 * Fixed [ 1158950 ] ATTopic default view wrong. This fix needs also a svn up
   of CMFPlone 2.1.
   [tiran]

 * Moved external storage based variants for ATFile and ATImage to a seperate
   module. They won't make it in the official trunk unless the storage is 
   working well and the types are tested.
   [tiran]

 * Added 'atct_album_view' and 'atct_album_image' templates based on the
   templates of CMFPhotoAlbum.
   [tiran]

 * Replaced the config vars for permissions with new permissions:

    o ModifyConstrainTypes for constrain types mixin
    o ModifyViewTemplate for template mixin
    o ViewHistory for history mixin
    o UploadViaURL for the new upload via url feature

   By default the permissions are restricted to manager only.
   [tiran]

 * Added new upload via url feature to upload a file or image using an url. The
   file is downloaded from the remote server using urllib2. Since this feature
   isn't finished it's not available by default.
   [tiran]

 * Implemented some very useful functions based on CMFPhoto code for ATImage.
   The new features are:

    o getting the exif informations from images using Gene Cash's exif lib
    o getting the image orientation from exif data (rotation and mirror)
    o Rotating and flipping images using the PIL library incl. a new tab

   The CMFPhoto exif and transform code was written by several ppl including
   Oliver Baltzer and me. I'm unable to determine the other coders. Please
   write me an email if you want credits for your great work!
   [tiran]

 * Refactored huge parts of the migration suite. More later
   [tiran]

 * Fixed [ 1026616 ] Actions aren't migrated. Actions are migrated from
   the cmf fti if an action with the id doesn't exist on the atct fti.
   [tiran]
